--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </nav>
 </header>
     <article class="hero-section">
-        <img src="./img/imagen1.png" alt="imagen-principal" class="imagen1">
+        <img src="./img/imagen1.png" class="imagen1">
+        
         <h1 class="titulo">LOREM IPSUM AD VALOREM</h1>
         <p class="texto1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, rerum harum architecto maxime inventore error optio vel repudiandae quibusdam minima voluptates minus officia.</p>
         <div>
